grafana/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      nodeSelector: 
        labelName: bigmaster
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
      - image: grafana/grafana
        name: grafana-core
        imagePullPolicy: IfNotPresent
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          # initialDelaySeconds: 30
          # timeoutSeconds: 1
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana
          subPath: grafana
        # volumeMounts:
        # - mountPath: /var/lib/grafana # pod下的目录
        #   name: storage

      # initContainers:
      # - name: "init-chown-data"
      #   image: "busybox:latest"
      #   imagePullPolicy: IfNotPresent
      #   command: ["chown", "-R", "472:472", "/var/lib/grafana"]
      #   volumeMounts: 
      #     - name: grafana-persistent-storage
      #       mountPath: /var/lib/grafana
      #       subPath: grafana

      volumes:
      - name: grafana-persistent-storage
        persistentVolumeClaim:
          claimName: grafana-pvc
      # volumes:
      # - name: storage
      #   hostPath:
      #     path: /home/ubuntu/grafana_data  #宿主机path
      #     type: DirectoryOrCreate
