grafana/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
# spec:
#    rules:
#    - host: k8s.grafana
#      http:
#        paths:
#        - path: /
#          backend:
#           serviceName: grafana
#           servicePort: 3000
spec:
  rules:
  - host: k8s.grafana
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Exact
